<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/requires_permission"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:layout_marginTop="32dp"
            android:textSize="12sp"
            app:icon="@drawable/ic_settings"
            app:iconGravity="end"
            app:iconSize="16dp"
            app:cornerRadius="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/proceedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/proceed"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:textSize="12sp"
            app:icon="@drawable/ic_tail_arrow_forward"
            app:iconGravity="end"
            app:iconSize="16dp"
            app:cornerRadius="16dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>