<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View android:id="@+id/topBar"
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:background="?colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView android:id="@+id/appIcon"
        android:layout_gravity="center"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        android:contentDescription="@string/app_icon_desc"
        tools:src="@drawable/ic_launcher_background"/>

    <TextView android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        tools:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appIcon"
        android:layout_margin="4dp" />

    <View android:id="@+id/bottomBar"
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:background="?colorOnSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName"/>

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/appIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/appName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/start"/>

        <TextView android:id="@+id/sessionStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="16:55:04"/>

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintStart_toEndOf="@id/appIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/appName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/end"/>

        <TextView android:id="@+id/sessionEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            tools:text="16:55:04"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>